# hermes-agent

./: .vulture-whitelist.py  AGENTS.md  CLAUDE.md  cli.py  hermes_state.py  model_tools.py  pyproject.toml  requirements-dev.txt  run_agent.py  toolsets.py
agent/: batch_queue.py  context_compressor.py  model_router.py  prompt_builder.py  prompt_caching.py  sequence_detector.py
cron/: scheduler.py
docs/: sda-wire-runbook.md
gateway/: config.py  heartbeat.py  mcp_pool.py  run.py  session.py  status.py  workflow_engine.py
hermes_cli/: main.py  profile.py
pipelines/: ils-auto-quote.yaml
scripts/: verify_engine_capabilities.py
tasks/: backup-ils_auto_quote-2026-04-10.py  overnight-run-2026-04-10.md  prd-karpathy-ops.json  prd-sda-wire.json  prd-summit-domain-addons.json  prd.json  progress-karpathy-ops.txt  progress.txt  ralph-spec-swa-001.md  ralph-spec-swa-003.md  ralph-spec-us003.md  ralph-spec-us004.md  ralph-spec-us005.md  ralph-state.json  test-matrix.md
tests/: test_cli_init.py  test_hermes_state.py  test_profile.py
tests/agent/: test_batch_queue.py  test_context_compressor.py  test_model_router.py  test_sequence_detector.py
tests/fixtures/domain_rules/: mock_gmail_mailbox.json  mock_v11_responses.json  sample_rfqs.json
tests/gateway/: test_heartbeat.py  test_mcp_pool.py  test_workflow_engine.py
tests/integration/: test_bridge_wire.py  test_domain_rules.py  test_sda_e2e.py  test_summit_sheet_integration.py  test_summit_trace_flow.py  test_telegram_sda_integration.py
tests/scripts/: test_verify_engine_capabilities.py
tests/tools/: test_auto_quote_bridge.py  test_clipboard.py  test_customer_quote_ref.py  test_memory_retrieval.py  test_no_price_cascade.py  test_outbound_solicit.py  test_quote_append_detector.py  test_summit_sheet_tool.py  test_summit_sheet_tool_sanity.py  test_telegram_sda_flows.py  test_trace_flags.py
tools/: __init__.py  auto_quote_bridge.py  cc_remote.py  customer_quote_ref.py  mcp_tool.py  memory_retrieval.py  memory_tool.py  no_price_cascade.py  outbound_solicit_tool.py  quote_append_detector.py  registry.py  send_message_tool.py  summit_sheet_tool.py  summit_trace_flags.py  telegram_sda_flows.py
