[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent"
version = "0.1.0"
description = "The self-improving AI agent — creates skills from experience, improves them during use, and runs anywhere"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nous Research" }]
license = { text = "MIT" }
dependencies = [
  # Core
  "openai",
  "python-dotenv",
  "fire",
  "httpx",
  "rich",
  "tenacity",
  "pyyaml",
  "requests",
  "jinja2",
  "pydantic>=2.0",
  # Interactive CLI (prompt_toolkit is used directly by cli.py)
  "prompt_toolkit",
  # Tools
  "firecrawl-py",
  "fal-client",
  # Text-to-speech (Edge TTS is free, no API key needed)
  "edge-tts",
  # mini-swe-agent deps (terminal tool)
  "litellm>=1.75.5",
  "typer",
  "platformdirs",
  # Skills Hub (GitHub App JWT auth — optional, only needed for bot identity)
  "PyJWT[crypto]",
]

[project.optional-dependencies]
modal = ["swe-rex[modal]>=1.4.0"]
daytona = ["daytona>=0.148.0"]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "vulture"]
messaging = ["python-telegram-bot>=20.0", "discord.py>=2.0", "aiohttp>=3.9.0", "slack-bolt>=1.18.0", "slack-sdk>=3.27.0"]
cron = ["croniter"]
slack = ["slack-bolt>=1.18.0", "slack-sdk>=3.27.0"]
cli = ["simple-term-menu"]
tts-premium = ["elevenlabs"]
pty = ["ptyprocess>=0.7.0"]
honcho = ["honcho-ai>=2.0.1"]
mcp = ["mcp>=1.2.0"]
homeassistant = ["aiohttp>=3.9.0"]
yc-bench = ["yc-bench @ git+https://github.com/collinear-ai/yc-bench.git"]
all = [
  "hermes-agent[modal]",
  "hermes-agent[daytona]",
  "hermes-agent[messaging]",
  "hermes-agent[cron]",
  "hermes-agent[cli]",
  "hermes-agent[dev]",
  "hermes-agent[tts-premium]",
  "hermes-agent[slack]",
  "hermes-agent[pty]",
  "hermes-agent[honcho]",
  "hermes-agent[mcp]",
  "hermes-agent[homeassistant]",
]

[project.scripts]
hermes = "hermes_cli.main:main"
hermes-agent = "run_agent:main"

[tool.setuptools]
py-modules = ["run_agent", "model_tools", "toolsets", "batch_runner", "trajectory_compressor", "toolset_distributions", "cli", "hermes_constants"]

[tool.setuptools.packages.find]
include = ["tools", "hermes_cli", "gateway", "cron", "honcho_integration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (API keys, Modal, etc.)",
    "domain_rules: marks the 5-rule domain compliance suite",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# E402: module-level imports not at top — intentional across the codebase
#       (env vars and sys.path must be set before importing modules that read them)
# F541: f-strings without placeholders — cosmetic, pervasive across the codebase
ignore = ["E402", "F541"]

[tool.ruff.lint.per-file-ignores]
# Vulture whitelist uses bare names that ruff flags as F821
".vulture-whitelist.py" = ["F821"]
# cli.py: F401 (unused imports kept for side effects), F811 (intentional redefinitions
# after conditional imports / ASCII art blocks), F841 (argparse subparser vars)
"cli.py" = ["F401", "F811", "F841"]
# hermes_cli/main.py: F401 (lazy imports inside command handlers), F841 (argparse subparser vars)
"hermes_cli/main.py" = ["F401", "F841"]
# run_agent.py: F401 (imports used dynamically), F841 (variables used in conditional paths)
"run_agent.py" = ["F401", "F841"]
# gateway/run.py: F401 (lazy platform imports), F841 (exception vars)
"gateway/run.py" = ["F401", "F841"]
# batch_runner.py: F841 (checkpoint vars)
"batch_runner.py" = ["F841"]
# agent/context_compressor.py: F841 (intentional look-behind var)
"agent/context_compressor.py" = ["F841"]
